test/fail/integration/_fail_grammar_value_1.hs
x :: Int
x = 3t4
main = print "hello"